--- a/package.json
+++ b/package.json
@@ -17,6 +17,7 @@
   "author": "Your Name",
   "license": "ISC",
   "dependencies": {
+    "axios": "^1.10.0",
     "cors": "^2.8.5",
     "dotenv": "^17.1.0",
     "express": "^5.1.0",
@@ -25,6 +26,7 @@
     "mongoose": "^8.16.2",
     "morgan": "^1.10.0",
     "shortid": "^2.2.17",
+    "telegraf": "^4.16.3",
     "ua-parser-js": "^2.0.4",
     "useragent": "^2.3.0",
     "validator": "^13.15.15"
